<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="androdev.sqlitetut.activity.Activity_detail"
    android:nestedScrollingEnabled="false">


    <RelativeLayout
        android:id="@+id/layout_img"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/background_detail"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_empty_music2" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/layout_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/edit_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:enabled="false"
                android:inputType="text"
                android:maxLength="20">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/txt_add_name" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edit_detail_name"
                android:layout_below="@+id/edit_detail_name"
                android:layout_marginTop="10dp"
                android:text="@string/txt_add_date_birth" />

            <EditText
                android:id="@+id/edit_detail_date_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:enabled="false"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edit_detail_date_birth"
                android:layout_below="@+id/edit_detail_date_birth"
                android:layout_marginTop="10dp"
                android:text="@string/txt_add_gender" />

            <EditText
                android:id="@+id/edit_detail_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:enabled="false"
                android:inputType="text"
                android:maxLength="1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edit_detail_gender"
                android:layout_below="@+id/edit_detail_gender"
                android:layout_marginTop="10dp"
                android:text="@string/txt_add_address" />

            <EditText
                android:id="@+id/edit_detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:enabled="false"
                android:inputType="text"
                android:maxLength="1000"
                android:nestedScrollingEnabled="false"
                android:singleLine="true" />


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--BUTTON SAVE-->
        <Button
            android:id="@+id/btn_detail_save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_done"
            android:text="@string/txt_add_save"
            android:visibility="gone" />

        <!--BUTTON UPDATE-->
        <Button
            android:id="@+id/btn_detail_update"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_done"
            android:text="@string/txt_detail_update"
            android:visibility="visible" />

        <!--BUTTON BACK-->
        <Button
            android:id="@+id/btn_detail_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_arrow"
            android:text="@string/txt_detail_cancel"
            android:visibility="gone" />

        <!--BUTTON DELETE-->
        <Button
            android:id="@+id/btn_detail_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_arrow"
            android:text="@string/txt_detail_delete"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>
